--- a/views/alunos/show.ejs
+++ b/views/alunos/show.ejs
@@ -1,28 +1,40 @@
 <h1>Alunos</h1>
-<a href="/alunos/add" class="btn btn-success mb-3">Add Aluno</a>
+
+<a href="/alunos/add" class="btn btn-success mb-3">Add Alunos</a>
 <table class="table table-bordered">
+
     <thead>
         <tr>
             <th>ID</th>
             <th>Nome</th>
+            <th>Telefone</th>
+            <th>Curso</th>
             <th>Ações</th>
         </tr>
     </thead>
     <tbody>
-        <% alunos.forEach(aluno => { %>
-        <tr>
-            <td><%= aluno.id %></td>
-            <td><%= aluno.nome %></td>
-            <td>
-                <a href="/alunos/edit/<%= aluno.id %>"
-                    class="btn btn-primary btn-sm">Editar</a>
-                <form action="/alunos/delete/<%= aluno.id %>"
-                    method="POST" class="d-inline">
-                    <button type="submit"
-                        class="btn btn-danger btn-sm">Delete</button>
-                </form>
-            </td>
-        </tr>
-        <% }) %>
+        <% alunos.forEach(aluno=> { %>
+            <tr>
+                <td>
+                    <%= aluno.id %>
+                </td>
+                <td>
+                    <%= aluno.nome %>
+                </td>
+                <td>
+                    <%= aluno.telefone %>
+                </td>
+                <td>
+                    <%= aluno.Curso.nome %>
+                </td>
+                <td>
+                    <a href="/alunos/edit/<%= aluno.id %>" class="btn btn-primary btn-sm">Editar</a>
+                    <form action="/alunos/delete/<%= aluno.id %>" method="POST" class="d-inline">
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                </td>
+            </tr>
+
+            <% }) %>
     </tbody>
 </table>
