--- a/views/categorias/add.ejs
+++ b/views/categorias/add.ejs
@@ -1,1 +1,8 @@
-c
+<h1>Add Categoria</h1>
+<form action="/categorias/add" method="POST">
+    <div class="form-group">
+        <label for="nome">Categoria</label>
+        <input type="text" class="form-control" id="nome" name="nome" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Add</button>
+</form>
