--- a/views/curso/show.ejs
+++ b/views/curso/show.ejs
@@ -1,5 +1,5 @@
-<h1>Categorias</h1>
-<a href="/categorias/add" class="btn btn-success mb-3">Add Categoria</a>
+<h1>Cursos</h1>
+<a href="/cursos/add" class="btn btn-success mb-3">Add Curso</a>
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -9,14 +9,14 @@
         </tr>
     </thead>
     <tbody>
-        <% categorias.forEach(categoria => { %>
+        <% cursos.forEach(curso => { %>
         <tr>
-            <td><%= categoria.id %></td>
-            <td><%= categoria.nome %></td>
+            <td><%= curso.id %></td>
+            <td><%= curso.nome %></td>
             <td>
-                <a href="/categorias/edit/<%= categoria.id %>"
+                <a href="/cursos/edit/<%= curso.id %>"
                     class="btn btn-primary btn-sm">Editar</a>
-                <form action="/categorias/delete/<%= categoria.id %>"
+                <form action="/cursos/delete/<%= curso.id %>"
                     method="POST" class="d-inline">
                     <button type="submit"
                         class="btn btn-danger btn-sm">Delete</button>
