--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,3 @@
-<h1 class="mt-5">Seja bem vindo</h1>
-<p class="mt-5">App - backend em Node.js (express) com ORM (sequelize)</p>
-<p class="mb-5">Navegue pelo navbar.</p>
+<h1>Seja bem vindo</h1>
+<p>App - backend em Node.js (express) com ORM (sequelize)</p>
+<p>Navegue pelo navbar.</p>
